k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: 'true'
spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: kong
  namespace: gateway
spec:
  gatewayClassName: kong
  listeners:
    - name: proxy
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: dev
  namespace: dev
  annotations:
    konghq.com/plugins: opentelemetry,pre-function-tracing
spec:
  parentRefs:
    - name: kong
      namespace: gateway
  hostnames:
    - 'localhost'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /product
      backendRefs:
        - name: product
          kind: Service
          port: 8082
